--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
             });
 
             if (response.ok) {
-                alert("✅ تم إرسال طلبك للديسكورد بنجاح!");
+alert("✅ تم إرسال طلبك بنجاح! الإدارة هتتواصل معاك على الديسكورد قريباً.");                
                 document.getElementById('orderModal').style.display = 'none';
             } else {
                 alert("❌ فشل الإرسال، تأكد من إعدادات الـ Webhook.");
@@ -331,3 +331,4 @@
 <script src="minecraft.js"></script>
 </body>
 </html>
+
